--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,6 +2,14 @@
 
 {% block body %}
     Hello World {{ a }}
+
+    <br>
+
+    {% if some_value %}
+        {{ 'YES' }}
+    {% endif %}
 {% endblock %}
 
 {% block stylesheets %}{% endblock %}
+
+{% block title %} Homepage {% endblock %}
