move templates to Bundle

--- a/src/AppBundle/Resources/views/default/index.html.twig
+++ b/src/AppBundle/Resources/views/default/index.html.twig
@@ -1,13 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends '@App/layout.html.twig' %}
 
 {% block body %}
-    Hello World {{ a }}
+    Hello World
 
     <br>
 
-    {% if some_value %}
-        {{ 'YES' }}
-    {% endif %}
 {% endblock %}
 
 {% block stylesheets %}{% endblock %}
