--- a/src/AppBundle/Resources/views/default/feedback.html.twig
+++ b/src/AppBundle/Resources/views/default/feedback.html.twig
@@ -1,7 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends '@App/layout.html.twig' %}
 
 {% block body %}
-    Feedback page
+    Feedback page!
 {% endblock %}
 
 {% block stylesheets %}{% endblock %}
