--- a/src/AppBundle/Resources/views/product/show.html.twig
+++ b/src/AppBundle/Resources/views/product/show.html.twig
@@ -1,9 +1,14 @@
 {% extends '@App/layout.html.twig' %}
 
 {% block body %}
-    <h1>Products {{ id }}</h1>
+    <h1>Product {{ product.title }}</h1>
+    <hr>
+    Title: {{ product.title }} <br>
+    Price: {{ product.price }} <br>
+    Description: {{ product.description }} <br>
+
 {% endblock %}
 
 {% block stylesheets %}{% endblock %}
 
-{% block title %} Products page{% endblock %}
+{% block title %} Products {{ product.id }}{% endblock %}
